<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <TextView
        android:id="@+id/contact_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="About Me"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_since" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="CuriousAubergine89"
        android:textColor="#000000"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/profile_picture"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email" />

    <Button
        android:id="@+id/edit_profile_button"
        android:layout_width="89dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:text="Edit Profile"

        android:textColor="#3F51B5"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="87dp"
        android:layout_height="92dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blacklogo" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:text="curious@gmail.com"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/profile_picture"
        app:layout_constraintStart_toEndOf="@+id/email"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_since"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="User Since:"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_text" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="Email:"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_join_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Tue March 16"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/user_since"
        app:layout_constraintTop_toBottomOf="@+id/username_text" />

    <TextView
        android:id="@+id/information_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:lines="5"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_info" />

    <TextView
        android:id="@+id/created_experiment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Created Experiments"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_text" />

    <ListView
        android:id="@+id/user_experiment_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/created_experiment" />

</androidx.constraintlayout.widget.ConstraintLayout>