<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserProfileActivity">

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Email"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="24dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Description"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="12dp"
        android:inputType="textMultiLine"
        android:lines="4" />

</LinearLayout>