...
        android:textSize="12sp"
        app:icon="@android:drawable/ic_menu_mapmode"
        app:layout_constraintBottom_toTopOf="@+id/scan_barcode_btn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/view_profile_btn"
        android:layout_width="171dp"
        android:layout_height="39dp"
        android:layout_marginTop="26dp"
        android:backgroundTint="#FB5F5F"
        android:text="View Profile"
        android:textSize="11sp"
        app:icon="@android:drawable/ic_menu_info_details"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
