<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/comments_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExperimentCommentsFragment">

    <Button
        android:id="@+id/add_comment_btn"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="409dp"
        android:layout_height="51dp"
        android:backgroundTint="#FFFFFF"
        android:text="New Comment"
        android:textColor="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/experimentQuestionsListView" />

    <ListView
        android:id="@+id/experimentQuestionsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>