...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExperimentOverviewActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
...
            android:text="Data" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/experimentCommentsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comments" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/experimentOverviewViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...
