...
        android:text="Search Experiments"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_profile_btn" />

    <Button
        android:id="@+id/viewExperiments_btn"
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#9F76E8"
        android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
        android:drawableTint="@color/white"
        android:text="View Experiments"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_profile_btn" />

    <Button
        android:id="@+id/scanBarcode_btn"
...
